<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:padding="50dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_1_name"
        android:textSize="24sp"
        android:layout_marginVertical="20dp"/>

    <EditText
        android:id="@+id/player1_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:autofillHints="username" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_2_name"
        android:textSize="24sp"
        android:layout_marginVertical="20dp"/>

    <EditText
        android:id="@+id/player2_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:autofillHints="username"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="#EEEEEE"
            android:textColor="@color/black"
            android:onClick="onCancelBtnClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="20dp"
            android:onClick="onPlayBtnClick"/>

    </LinearLayout>



</LinearLayout>