<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:onClick="goToStart"/>

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:onClick="goToSettingsActivity"/>

</LinearLayout>